--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,5 +1,10 @@
-<h1>Shelter App - The Pet Republic</h1>
-<p class='description'>
-  Free Shelter Software - Make Your City A NOKILL city foster or adopt a pet today.
-  Find out more at the <a href='HereThePetRepublic.com/Foster'>Here</a>
-</p>
+<section>
+<header>
+  <h1>Shelter App - The Pet Republic</h1>
+  <p class='description'>
+    Free Shelter Software - Make Your City A NOKILL city foster or adopt a pet today.
+    Find out more at the <a href='ThePetRepublic.com/Foster'>Here</a>
+  </p>
+</header>
+ <pet></pet>
+ </section>
