--- a/app/pet.component.html
+++ b/app/pet.component.html
@@ -2,11 +2,10 @@
   <img style="width: 100%;" src="media/dogs/1.jpg" class="icon" />
 </div>
 <div style='padding:10px;'>
-  <h3>{{ name }}</h3>
-  <div>{{isFostered()}}</div>
+  <h2>Atom</h2>
 </div>
 <div class="tools">
-  <a class="adopt" (click)="onDelete()">
+  <a class="adopt" >
     Adopted
   </a>
   <a class="foster">
