--- a/app/pet.component.html
+++ b/app/pet.component.html
@@ -8,7 +8,7 @@
   <a class="adopt" >
     Adopted
   </a>
-  <a class="foster">
+  <a class="foster" (click)="onFoster()" >
     Foster
   </a>
 </div>
