--- a/app/app.component.html
+++ b/app/app.component.html
@@ -2,9 +2,9 @@
 <header>
   <h1>Shelter App - The Pet Republic</h1>
   <p class='description'>
-    Free Shelter Software - Make Your City A NOKILL city foster or adopt a pet today.
-    Find out more at the <a href='ThePetRepublic.com/Foster'>Here</a>
+    Free Shelter Software - Help Make Your City A NOKILL City Foster Or Adopt A Pet Today.
+    <br> Get More Information <a href='ThePetRepublic.com/Foster'>@ThePetRepublic.com/Foster/</a>
   </p>
 </header>
- <pet></pet>
+ <pet [pet]="firstPet" ></pet>
  </section>
