--- a/app/app.component.html
+++ b/app/app.component.html
@@ -6,12 +6,8 @@
     
   </p>
 </header>
+<foster-pet-list></foster-pet-list>
  
-<shelter-pet 
-  [pet]="firtstPet"
-  (foster)="onPetFoster($event)
-  ">
-</shelter-pet>
 
 
 
