--- a/app/pet.component.html
+++ b/app/pet.component.html
@@ -1,6 +1,8 @@
 <div>
   
-  <!--<img style="width: 100%;" src="{{pet.picture}}" class="icon" />-->
+ 
+  <img style="width: 100%;" src="{{ pet.picture }}" class="icon" />
+ 
 </div>
 <div style='padding:10px;'>
   <h2>{{pet.name}}</h2>
@@ -23,10 +25,22 @@
     <path d="M12 9.229c.234-1.12 1.547-6.229 5.382-6.229 2.22 0 4.618 1.551 4.618 5.003 0 3.907-3.627 8.47-10 12.629-6.373-4.159-10-8.722-10-12.629 0-3.484 2.369-5.005 4.577-5.005 3.923 0 5.145 5.126 5.423 6.231zm-12-1.226c0 4.068 3.06 9.481 12 14.997 8.94-5.516 12-10.929 12-14.997 0-7.962-9.648-9.028-12-3.737-2.338-5.262-12-4.27-12 3.737z"
     />
   </svg>
-   
+
 </div>
-<div **ngIf="pet.fosteredOn" >
-  Foster Started: {{pet.fosteredOn}}
-</div>
+
+<!-- can never makes it to the DOM --> 
+<template [ngIf]="pet.fosteredOn">
+  Started Foster On {{ pet.fosteredOn }}
+</template>
+
+<!--
+  shortcuts the need for a template tag
+  both ways work the same
+  <div *ngIf="pet.fosteredOn">
+  Started Foster On {{ pet.fosteredOn }}
+</div>-->
+
+
+
  
    
