--- a/app/pet.component.html
+++ b/app/pet.component.html
@@ -5,7 +5,7 @@
  
 </div>
 <div style='padding:10px;'>
-  <h2>{{pet.name | slice : 0 : 4 | uppercase}}</h2>
+  <h2>{{pet.name   | uppercase}}</h2>
 </div>
 <div class="tools">
   <a class="adopt" >
