--- a/app/pet-form.component.html
+++ b/app/pet-form.component.html
@@ -3,21 +3,19 @@
 </header>
 <form
   [formGroup]="form"
- (ngSubmit)=onSubmit(form.value)
->
-
+  (ngSubmit)="onSubmit(form.value)">
   <ul>
     <li>
       <label for="type">Type</label>
-      <select name="type"  id="type"  formControlName="type" >
+      <select name=type id="type" formControlName="type">
         <option value="Cats">Cat</option>
-        <option value="Dogs">Dogs</option>
+        <option value="Dogs">Dog</option>
       </select>
     </li>
     <li>
-      <label  >Name</label>
-      <input type="text" name="name" id="name"  formControlName="name" >
-      
+      <label for="name">Name</label>
+      <input type="text" name="name" id="name" formControlName="name">
+
     </li>
     <li>
       <label  >Category</label>
@@ -29,11 +27,13 @@
         <option value="Siamese">Siamese</option>
         <option value="Yorkshire Terrier">Yorkshire Terrier</option>
       </select>
+      
     </li>
     <li>
       <label for="year">Year</label>
-      <input type="text" name="year" id="year"  formControlName="year" >
+      <input type="text" name="year" id="year" maxlength="4" formControlName="year">
+      
     </li>
   </ul>
-  <button type="submit"  >Save</button>
+  <button type="submit"   [disabled]="!form.valid" >Save</button>
 </form>
