--- a/app/pet-form.component.html
+++ b/app/pet-form.component.html
@@ -15,7 +15,9 @@
     <li>
       <label for="name">Name</label>
       <input type="text" name="name" id="name" formControlName="name">
-
+      <div *ngIf="form.controls.name.errors?.pattern" class="error">
+        Name Has Invalid Characters!
+      </div>
     </li>
     <li>
       <label  >Category</label>
@@ -32,7 +34,12 @@
     <li>
       <label for="year">Year</label>
       <input type="text" name="year" id="year" maxlength="4" formControlName="year">
-      
+      <div *ngIf="form.controls.year.errors?.year" class="error">
+                 Year Must be between 
+        {{form.controls.year.errors?.year.min}} 
+                        and 
+        {{form.controls.year.errors?.year.max}}
+      </div>
     </li>
   </ul>
   <button type="submit"   [disabled]="!form.valid" >Save</button>
