--- a/app/pet-form.component.html
+++ b/app/pet-form.component.html
@@ -8,8 +8,9 @@
     <li>
       <label for="type">Type</label>
       <select name=type id="type" formControlName="type">
-        <option value="Cats">Cat</option>
-        <option value="Dogs">Dog</option>
+        <option
+         *ngFor="let petType of lookupLists.types"
+        value="{{petType.plural}}">{{petType.single}} </option>
       </select>
     </li>
     <li>
