--- a/app/pet-list.component.html
+++ b/app/pet-list.component.html
@@ -1,15 +1,4 @@
-<nav>
- 
-    <a (click)="getPets('')">
-    <img src="media/04.png" class="icon" />
-  </a>
-  <a  (click)="getPets('Cats')">
-    <img src="media/03.png" class="icon" />
-  </a>
-  <a (click)="getPets('Dogs')">
-    <img src="media/02.png" class="icon" />
-  </a>
-</nav>
+
 <header>
   {{ Pets | catagoryList }}
 </header>
@@ -27,5 +16,7 @@
    </shelter-pet>
 </section>
  
-
+<footer>
+   <br> Get more information about fostering or a adopting a pet at <a href='ThePetRepublic.com/Foster'>ThePetRepublic.com/Foster/</a>
+ </footer>
  
