--- a/app/pet.component.css
+++ b/app/pet.component.css
@@ -4,7 +4,7 @@
   width: 200px;
   height: 400px;
   border: 2px solid;
-  background-color: #29394b;
+  background-color: black;
   padding: 10px;
   color: #bdc2c5;
 }
@@ -13,16 +13,19 @@ h2 {
   flex: 1;
 }
 :host.type-dog {
-  border-color: #53ace4;
+  border-color: lightblue;
+  border-width: 5px;
 }
+
 :host.type-dog > h2 {
-  color: #53ace4;
+  color: lightblue;
 }
 :host.type-cat {
-  border-color: #45bf94;
+  border-color:  darkslategray;;
+  border-width: 5px;
 }
 :host.type-cat > h2 {
-  color: #45bf94;
+  color: darkslategray;;
 }
 .tools {
   margin-top: 8px;
@@ -44,7 +47,7 @@ h2 {
 .fosterRequest.is-fosterRequest.is-fosterRequest-hovering {
     fill: #ec4342;
 }
-.adopt {
+.delete {
   display: block;
   background-color: #ec4342;
   padding: 4px;
@@ -53,7 +56,7 @@ h2 {
   color: #ffffff;
   cursor: pointer;
 }
-.foster {
+.details {
   display: block;
   background-color: #37ad79;
   padding: 4px;
