--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,12 +1,12 @@
 
 <nav>
-    <a (click)="getPets('')">
+   <a routerLink="/">
     <img src="media/04.png" class="icon" />
   </a>
-  <a  (click)="getPets('Cats')">
+  <a routerLink="/Cats">
     <img src="media/03.png" class="icon" />
   </a>
-  <a (click)="getPets('Dogs')">
+  <a routerLink="/Dogs">
     <img src="media/02.png" class="icon" />
   </a>
 </nav>
