--- a/app/pet-list.component.html
+++ b/app/pet-list.component.html
@@ -1,5 +1,6 @@
 
 <header>
+    <h2>{{type}}</h2>
   {{ Pets | catagoryList }}
 </header>
 
@@ -17,6 +18,11 @@
 </section>
  
 <footer>
-   <br> Get more information about fostering or a adopting a pet at <a href='ThePetRepublic.com/Foster'>ThePetRepublic.com/Foster/</a>
+    <a  routerLink="/add" >
+    <img src="media/01.png" class="icon" />
+  </a>
+    <div class="moreInfo">
+       Get more information about fostering or a adopting a pet at <a _ngcontent-phk-3="" href="ThePetRepublic.com/Foster">ThePetRepublic.com/Foster/</a>
+    </div>
  </footer>
  
