--- a/app/pet-form.component.css
+++ b/app/pet-form.component.css
@@ -9,11 +9,11 @@ ul li {
   margin: 10px 0;
 }
 header, label {
-  color: #ffffff;
+  color: black;
 }
 input, select {
-  background-color: #ffffff;
-  color: #000;
+  background-color: #29394b;
+  color: #c6c5c3;
   border-radius: 3px;
   border: none;
   box-shadow: 0 1px 2px rgba(0,0,0,0.2) inset, 0 -1px 0 rgba(0,0,0,0.05) inset;
